# runtime-profiling

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: TIMING_GUIDE.md  WINIDEA_ITM_GUIDE.md
examples/: basic_usage.cpp
include/embprof/: clock.hpp  config.hpp  embprof.hpp  formatter.hpp  histogram.hpp  macros.hpp  output.hpp  p2_quantile.hpp  profiling_point.hpp  registry.hpp  running_stats.hpp  serialize.hpp
single_include/: embprof_lite.hpp
tests/: test_histogram.cpp  test_lite_standalone.cpp  test_output.cpp  test_p2_quantile.cpp  test_profiling_point.cpp  test_registry.cpp  test_running_stats.cpp  test_scoped_timer.cpp  test_serialize.cpp
